outputs/generated_env/kubernetes/network_policies/cybersim-zone-a-allow-grafana-to-grafana-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-grafana-to-grafana-loki
  namespace: cybersim-zone-a
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-2
      podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana
    ports:
    - port: 3100
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-loki
  policyTypes:
  - Ingress
